// Copyright (C) 2023 Quickwit, Inc.
//
// Quickwit is offered under the AGPL v3.0 and as commercial software.
// For commercial licensing, contact us at hello@quickwit.io.
//
// AGPL:
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program. If not, see <http://www.gnu.org/licenses/>.

syntax = "proto3";

package quickwit.indexing;

service IndexingService {
  // Apply an indexing plan on the node.
  rpc ApplyIndexingPlan(ApplyIndexingPlanRequest) returns (ApplyIndexingPlanResponse);
}

message ApplyIndexingPlanRequest {
  repeated IndexingTask indexing_tasks = 1;
}

message PipelineUid {
  bytes pipeline_uid = 1;
}

message IndexingTask {
  // The tasks's index UID.
  string index_uid = 1;
  // The task's source ID.
  string source_id = 2;
  // pipeline id
  PipelineUid pipeline_uid = 4;
  // The shards assigned to the indexer.
  repeated uint64 shard_ids = 3;
}

message ApplyIndexingPlanResponse {}
